refactor(server/food): refactor food handlers
